# fzgrep-cpp

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  meson.build
src/: CMakeLists.txt  main.cpp  meson.build
tests/: CMakeLists.txt  dummy.cpp
